--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "snowball-compiler"
+name = "snowball"
 version = "0.1.0"
 authors = ["merl <merl.001.mia@gmail.com>"]
 edition = "2018"
